# backend/api/gen/go/app/service/v1/i_internal_message_http.pb.go
@@ -1,0 +1,122 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: app/service/v1/i_internal_message.proto
+
+package apppb
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+	v1 "github.com/tx7do/go-crud/api/gen/go/pagination/v1"
+	v11 "go-wind-oa/api/gen/go/internal_message/service/v1"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationInternalMessageServiceGetMessage = "/app.service.v1.InternalMessageService/GetMessage"
+const OperationInternalMessageServiceListMessage = "/app.service.v1.InternalMessageService/ListMessage"
+
+type InternalMessageServiceHTTPServer interface {
+	// GetMessage 查询站内信消息详情
+	GetMessage(context.Context, *v11.GetInternalMessageRequest) (*v11.InternalMessage, error)
+	// ListMessage 查询站内信消息列表
+	ListMessage(context.Context, *v1.PagingRequest) (*v11.ListInternalMessageResponse, error)
+}
+
+func RegisterInternalMessageServiceHTTPServer(s *http.Server, srv InternalMessageServiceHTTPServer) {
+	r := s.Route("/")
+	r.GET("/app/v1/internal-message/messages", _InternalMessageService_ListMessage0_HTTP_Handler(srv))
+	r.GET("/app/v1/internal-message/messages/{id}", _InternalMessageService_GetMessage0_HTTP_Handler(srv))
+}
+
+func _InternalMessageService_ListMessage0_HTTP_Handler(srv InternalMessageServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v1.PagingRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInternalMessageServiceListMessage)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListMessage(ctx, req.(*v1.PagingRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v11.ListInternalMessageResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _InternalMessageService_GetMessage0_HTTP_Handler(srv InternalMessageServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in v11.GetInternalMessageRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationInternalMessageServiceGetMessage)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetMessage(ctx, req.(*v11.GetInternalMessageRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*v11.InternalMessage)
+		return ctx.Result(200, reply)
+	}
+}
+
+type InternalMessageServiceHTTPClient interface {
+	// GetMessage 查询站内信消息详情
+	GetMessage(ctx context.Context, req *v11.GetInternalMessageRequest, opts ...http.CallOption) (rsp *v11.InternalMessage, err error)
+	// ListMessage 查询站内信消息列表
+	ListMessage(ctx context.Context, req *v1.PagingRequest, opts ...http.CallOption) (rsp *v11.ListInternalMessageResponse, err error)
+}
+
+type InternalMessageServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewInternalMessageServiceHTTPClient(client *http.Client) InternalMessageServiceHTTPClient {
+	return &InternalMessageServiceHTTPClientImpl{client}
+}
+
+// GetMessage 查询站内信消息详情
+func (c *InternalMessageServiceHTTPClientImpl) GetMessage(ctx context.Context, in *v11.GetInternalMessageRequest, opts ...http.CallOption) (*v11.InternalMessage, error) {
+	var out v11.InternalMessage
+	pattern := "/app/v1/internal-message/messages/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInternalMessageServiceGetMessage))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// ListMessage 查询站内信消息列表
+func (c *InternalMessageServiceHTTPClientImpl) ListMessage(ctx context.Context, in *v1.PagingRequest, opts ...http.CallOption) (*v11.ListInternalMessageResponse, error) {
+	var out v11.ListInternalMessageResponse
+	pattern := "/app/v1/internal-message/messages"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationInternalMessageServiceListMessage))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
